<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/alc_toolbar"
        android:layout_width="match_parent"
        android:theme="@style/title"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/wel"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/alc_toolbar"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="105dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt">

        <Button
            android:id="@+id/alc_button"
            android:layout_width="194dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/alc"
            android:text="@string/button"
            android:fontFamily="serif-monospace"
            android:textAlignment="center"

            app:layout_constraintBottom_toTopOf="@+id/profile_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
            app:layout_constraintVertical_bias="0.905" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:backgroundTint="@color/alc"
            android:text="@string/pro"
            android:fontFamily="serif-monospace"
            app:layout_constraintEnd_toEndOf="@+id/alc_button"
            app:layout_constraintStart_toStartOf="@+id/alc_button"
            app:layout_constraintTop_toBottomOf="@id/alc_button"
            tools:layout_editor_absoluteY="261dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>